# gazebo_openai_tool

./: Dockerfile  README.md
learning/: CMakeLists.txt  package.xml
learning/config/: turtlebot3_course1_lidar_ql_params.yaml  turtlebot3_course1_lr_ql_params.yaml  turtlebot3_course2_tl_ql_params.yaml
learning/launch/: calibrate.launch  calibrate2.launch  start_training_ql_lidar_course1_turtlebot3.launch  start_training_ql_lr_course1_turtlebot3.launch  start_training_ql_tl_course2_turtlebot3.launch
learning/scripts/: qlearn.py  start_training_course1.py  start_training_ql_lidar_course1_turtlebot3.py  start_training_ql_lr_course1_turtlebot3.py  start_training_ql_tl_course2_turtlebot3.py
learning/training_results/: openaigym.episode_batch.0.3939.stats.json  openaigym.episode_batch.0.45762.stats.json  openaigym.episode_batch.0.5474.stats.json  openaigym.manifest.0.3939.manifest.json  openaigym.manifest.0.45762.manifest.json  openaigym.manifest.0.5474.manifest.json
maps/: CMakeLists.txt  package.xml  setup.py
maps/launch/: lane_recognition_course1.launch  lidar_course1.launch  test.launch  traffic_light_course2.launch
maps/models/lane_recognition_course1/course/: model.sdf
maps/models/lane_recognition_course1/walls/: model.config  model.sdf
maps/models/lane_recognition_course1/walls_invisible/: model.config  model.sdf
maps/models/lidar_course1/Maze1/: model.sdf
maps/models/lidar_course1/Outer_Walls/: model.config  model.sdf
maps/models/lidar_course1/Outer_Walls2/: model.config  model.sdf
maps/models/traffic_light/: control_traffic_light.py
maps/scripts/: control_traffic_light.py
maps/worlds/: lane_recognition_course1.world  lidar_course1.world  traffic_light_course2.world
robot_models/spawn_robots/: CMakeLists.txt  package.xml
robot_models/spawn_robots/launch/: spawn_turtlebot3_lane_recognition.launch  spawn_turtlebot3_lidar.launch  spawn_turtlebot3_traffic_light.launch
(+35 files in other folders)
